2004-02-18  Peter Spjuth  <peter.spjuth@space.se>

	*** 8.4.6 TAGGED FOR RELEASE ***

	* tests/grid.test:
	* generic/tkGrid.c: Fixed a bug in grid geometry calculations for
	a shrinking grid. [Bug 899246]

2004-02-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkBind.c (HandleEventGenerate): only modify root[xy]
	with [xy] when they haven't been otherwise set.

2004-02-17  Don Porter	<dgp@users.sourceforge.net>

	* tests/imgPhoto.test (imgPhoto-16.1):	Corrected incorrect
	variable name [Bug 899010].

2004-02-17  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXMouseEvent.c: fixed modifiers for MouseWheel events.
	
	* library/listbox.tcl:
	* library/text.tcl:
	* library/scrlbar.tcl: on Mac OS, add bindings for MouseWheel with
	modifiers, according to platform convention: 
	Option increases scrolling speed 10 fold; Space scrolls horizontally.
	
	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/tkAboutDlg.r: changed year in copyright strings to 2004.

2004-02-16  Jim Ingham  <jingham@apple.com>

	Fix for MouseWheel Events (from Daniel Steffen):

	* generic/tkEvent.c (Tk_HandleEvent): On Mac OS X, don't route
	MouseWheel events to the Focus window.  They are sent to the
	window under the pointer on X (and the GenerateMouseWheelEvent
	already got this right.)
	* library/listbox.tcl: On Mac OS, don't use the magic 120
	divisor that is used on Windows.  We may come up with a cleaner
	way to do this for the TOT, but this is simple and will do for the
	8.4 branch.
	* library/text.tcl: Ditto.
	* doc/bind.n: Update the docs to reflect the changes.
	
2004-02-15  Jim Ingham  <jingham@apple.com>

	Backport Mac OS X specific fixes from TOT:

	* macosx/tkMacOSXKeyboard.c: General cleanup.  Add support for
	[event generate].  [Bug #860454] - [Benjamin Riefenstahl]
	* macosx/tkMacOSXKeyboard.c: Add PowerBook keycode 0x34 as <Return>.
	[Benjamin Riefenstahl]

	* macosx/tkMacOSXScrlbr.c: Reworking Vince's fix to [Bug 842952].